<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailInfoFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgPlot"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/movieImageContentDescription"
                            tools:srcCompat="@tools:sample/avatars" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtLabelTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/title" />

                        <TextView
                            android:id="@+id/txtTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/standardLoadingText"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtLabelDirector"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/director" />

                        <TextView
                            android:id="@+id/txtDirector"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textSize="18sp"
                            tools:text="@string/standardLoadingText" />

                        <TextView
                            android:id="@+id/txtLabelReleaseDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/releaseDate" />

                        <TextView
                            android:id="@+id/txtReleaseDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textSize="18sp"
                            tools:text="@string/standardLoadingText" />

                        <TextView
                            android:id="@+id/txtLabelPlot"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/plot" />

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:scrollbarStyle="insideOverlay">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/txtPlot"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:gravity="center_horizontal"
                                            android:paddingLeft="16dp"
                                            android:paddingRight="16dp"
                                            android:paddingBottom="50dp"
                                            android:text="@string/standardLoadingText" />
                                </LinearLayout>
                        </ScrollView>

                </LinearLayout>
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
